--- a/CapstoneTemporary/Debug/makefile
+++ b/CapstoneTemporary/Debug/makefile
@@ -1,5 +1,6 @@
 ################################################################################
 # Automatically-generated file. Do not edit!
+# Toolchain: GNU Tools for STM32 (9-2020-q2-update)
 ################################################################################
 
 -include ../makefile.init
@@ -28,6 +29,12 @@ endif
 
 -include ../makefile.defs
 
+OPTIONAL_TOOL_DEPS := \
+$(wildcard ../makefile.defs) \
+$(wildcard ../makefile.init) \
+$(wildcard ../makefile.targets) \
+
+
 BUILD_ARTIFACT_NAME := CapstoneTemporary
 BUILD_ARTIFACT_EXTENSION := elf
 BUILD_ARTIFACT_PREFIX := 
@@ -54,22 +61,22 @@ all: main-build
 main-build: CapstoneTemporary.elf secondary-outputs
 
 # Tool invocations
-CapstoneTemporary.elf: $(OBJS) $(USER_OBJS) C:\Users\matts\STM32CubeIDE\workspace_1.5.1\CapstoneTemporary\STM32F429ZITX_FLASH.ld
+CapstoneTemporary.elf: $(OBJS) $(USER_OBJS) C:\Users\matts\STM32CubeIDE\workspace_1.5.1\CapstoneTemporary\STM32F429ZITX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	arm-none-eabi-gcc -o "CapstoneTemporary.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\matts\STM32CubeIDE\workspace_1.5.1\CapstoneTemporary\STM32F429ZITX_FLASH.ld" --specs=nosys.specs -Wl,-Map="CapstoneTemporary.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
-default.size.stdout: $(EXECUTABLES)
+default.size.stdout: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	arm-none-eabi-size  $(EXECUTABLES)
 	@echo 'Finished building: $@'
 	@echo ' '
 
-CapstoneTemporary.list: $(EXECUTABLES)
+CapstoneTemporary.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "CapstoneTemporary.list"
 	@echo 'Finished building: $@'
 	@echo ' '
 
-CapstoneTemporary.bin: $(EXECUTABLES)
+CapstoneTemporary.bin: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "CapstoneTemporary.bin"
 	@echo 'Finished building: $@'
 	@echo ' '
